menu-fix & new images

--- a/index.html
+++ b/index.html
@@ -9,25 +9,21 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <header id="header">
+      <i id="hamburger" class="fas fa-bars fa-2x"></i>
+      <ul class="nav">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Our story</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <!-- Header and Nav bar -->
+      <h1 class="logo">Healthy Tea</h1>
+      <div class="search"><i class="fas fa-search"></i></div>
+    </header>
     <!-- Landing -->
     <div id="landing">
-      <!-- Header and Nav bar -->
-      <header id="header">
-        <div id="hamburger">
-          <div class="line"></div>
-          <div class="line"></div>
-          <div class="line"></div>
-          <ul class="nav">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Store</a></li>
-            <li><a href="#">Our story</a></li>
-            <li><a href="#">Blog</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </div>
-        <h1 class="logo">Healthy Tea</h1>
-        <div class="search"><i class="fas fa-search"></i></div>
-      </header>
       <!-- Landing Content -->
       <div class="landing-content">
         <h1>Authentic Fresh Tea.</h1>
@@ -75,7 +71,9 @@
       <div class="menu-grid">
         <!-- ITEM -->
         <div class="menu-item">
-          <div class="menu-item-image" id="menu1-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea1.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Regular</p>
@@ -88,7 +86,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu2-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea2.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Honey tea</p>
@@ -101,7 +101,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu3-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea3.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>White</p>
@@ -114,7 +116,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu4-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea4.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Herbal</p>
@@ -127,7 +131,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu5-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea5.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Natural</p>
@@ -140,7 +146,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu6-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea6.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Green</p>
@@ -153,7 +161,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu7-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea7.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Turkish</p>
@@ -166,7 +176,9 @@
           </div>
         </div>
         <div class="menu-item">
-          <div class="menu-item-image" id="menu8-item-image"></div>
+          <div class="menu-item-image">
+            <img src="img/menu-items/tea8.jpg" alt="" />
+          </div>
           <div class="menu-item-details">
             <div>
               <p>Yellow</p>
@@ -187,7 +199,7 @@
         <div class="news-grid">
           <div id="news1" class="featured-news">
             <div class="news-image">
-              <img src="img/menu-items/tea4.jpg" alt="" />
+              <img src="img/tea1.jpg" alt="" />
             </div>
             <div class="news-details">
               <p><a href="#">Tea love</a> July 6, 2019</p>
@@ -198,7 +210,7 @@
           <!-- SIDE NEWS -->
           <div id="news2" class="side-news">
             <div class="news-image">
-              <img src="img/menu-items/tea5.jpg" alt="" />
+              <img src="img/tea2.jpg" alt="" />
             </div>
             <div class="news-details">
               <p><a href="#">Tea love</a> June 28, 2019</p>
@@ -208,7 +220,7 @@
           </div>
           <div id="news3" class="side-news">
             <div class="news-image">
-              <img src="img/menu-items/tea8.jpg" alt="" />
+              <img src="img/tea3.jpg" alt="" />
             </div>
             <div class="news-details">
               <p><a href="#">Healthy living</a> June 12, 2019</p>
@@ -218,7 +230,7 @@
           </div>
           <div id="news4" class="side-news">
             <div class="news-image">
-              <img src="img/menu-items/tea7.jpg" alt="" />
+              <img src="img/tea4.jpg" alt="" />
             </div>
             <div class="news-details">
               <p><a href="#">Productivity blog</a> May 19, 2019</p>
